[package]

name = "readline-sys"
version = "0.0.3"
authors = ["Nicholas Mazzuca <npmazzuca@gmail.com>"]
build = "build.rs"

description = "Declarations for `libreadline` or `libedit`"

repository = "https://github.com/GBGamer/readline-sys"

readme = "README.md"

keywords = ["readline", "input"]

license = "MIT"
